syntax = "proto3";

package rivet.backend.pkg.team.msg.user_unban;

import "legacy/proto/common.proto";

/// name = "msg-team-user-unban"
/// tail-ttl = 300
/// parameters = [
/// 	{ name = "team_id" },
/// 	{ name = "user_id" },
/// ]
message Message {
	rivet.common.Uuid team_id = 1;
	rivet.common.Uuid user_id = 2;
	rivet.common.Uuid unbanner_user_id = 3;
}

